--- a/examples/Makefile.x11.in
+++ b/examples/Makefile.x11.in
@@ -1,58 +1,44 @@
+BINARIES = triangle listmodes mthello pong3d mtbench particles splitview \
+		   mipmaps joytest gears boing wave  
 
-# Default: Build all tests
-all: triangle listmodes mthello pong3d mtbench particles splitview \
-     mipmaps joytest gears boing wave
+all: $(BINARIES)
 
-
-# Rule for triangle
 triangle: triangle.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) triangle.c $(LFLAGS) -o $@
 
-# Rule for listmodes
 listmodes: listmodes.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) listmodes.c $(LFLAGS) -o $@
 
-# Rule for mthello
 mthello: mthello.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) mthello.c $(LFLAGS) -o $@
 
-# Rule for pong3d
 pong3d: pong3d.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) pong3d.c $(LFLAGS) -o $@
 
-# Rule for mtbench
 mtbench: mtbench.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) mtbench.c $(LFLAGS) -o $@
 
-# Rule for particles
 particles: particles.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) particles.c $(LFLAGS) -o $@
 
-# Rule for splitview
 splitview: splitview.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) splitview.c $(LFLAGS) -o $@
 
-# Rule for mipmaps
 mipmaps: mipmaps.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) mipmaps.c $(LFLAGS) -o $@
 
-# Rule for joytest
 joytest: joytest.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) joytest.c $(LFLAGS) -o $@
 
-# Rule for gears
 gears: gears.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) gears.c $(LFLAGS) -o $@
 
-# Rule for boing
 boing: boing.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) boing.c $(LFLAGS) -o $@
 
-# Rule for wave
 wave: wave.c ../lib/x11/libglfw.a
 	$(CC) $(CFLAGS) wave.c $(LFLAGS) -o $@
 
 clean:
-	rm -f triangle listmodes mthello pong3d mtbench particles splitview \
-	      mipmaps gears boing wave
+	rm -f $(BINARIES)
 
