--- a/examples/Makefile.win32.cross-mgw
+++ b/examples/Makefile.win32.cross-mgw
@@ -1,5 +1,5 @@
 ##########################################################################
-# Makefile for GLFW test programs on Windows using MinGW32.
+# Makefile for GLFW test programs for Windows on Unix using MinGW32
 #-------------------------------------------------------------------------
 # To compile the test files using this makefile, run:
 #  make -f Makefile.win32.cross-mgw
@@ -7,73 +7,57 @@
 
 TARGET ?= i586-mingw32msvc-
 
-# Compiler settings
 CC     = gcc
 CFLAGS = -I../include -Wall -O3 -ffast-math
 
-# Linker settings
-LFLAGS = -L../lib/win32 -lglfw -lglu32 -lopengl32 
+LIB    = ../lib/win32/libglfw.a
+LFLAGS = $(LIB) -lglu32 -lopengl32 
 
-# Subsystem settings
 WINDOWS = -mwindows -e _mainCRTStartup
 CONSOLE = -mconsole
 
+BINARIES = triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
+		   particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
+		   boing.exe wave.exe
 
-# Default: Build all tests
-all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-     particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
-	 boing.exe wave.exe
+all: $(BINARIES)
 
-
-clean:
-	@rm -f *.o *.obj *.tds *.exe
-
-
-# Rule for triangle
-triangle.exe: triangle.c
+triangle.exe: triangle.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) triangle.c $(LFLAGS) -o $@
 
-# Rule for listmodes
-listmodes.exe: listmodes.c
+listmodes.exe: listmodes.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) listmodes.c $(LFLAGS) -o $@
 
-# Rule for mthello
-mthello.exe: mthello.c
+mthello.exe: mthello.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) mthello.c $(LFLAGS) -o $@
 
-# Rule for pong3d
-pong3d.exe: pong3d.c
+pong3d.exe: pong3d.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) pong3d.c $(LFLAGS) -lm -o $@
 
-# Rule for mtbench
-mtbench.exe: mtbench.c
+mtbench.exe: mtbench.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) mtbench.c $(LFLAGS) -o $@
 
-# Rule for particles
-particles.exe: particles.c
+particles.exe: particles.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) particles.c $(LFLAGS) -lm -o $@
 
-# Rule for splitview
-splitview.exe: splitview.c
+splitview.exe: splitview.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) splitview.c $(LFLAGS) -lm -o $@
 
-# Rule for mipmaps
-mipmaps.exe: mipmaps.c
+mipmaps.exe: mipmaps.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -lm -o $@
 
-# Rule for joytest
-joytest.exe: joytest.c
+joytest.exe: joytest.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) joytest.c $(LFLAGS) -lm -o $@
 
-# Rule for gears
-gears.exe: gears.c
+gears.exe: gears.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) gears.c $(LFLAGS) -lm -o $@
 
-# Rule for boing
-boing.exe: boing.c
+boing.exe: boing.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) boing.c $(LFLAGS) -lm -o $@
 
-# Rule for wave
-wave.exe: wave.c
+wave.exe: wave.c $(LIB)
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) wave.c $(LFLAGS) -lm -o $@
+
+clean:
+	rm -f $(BINARIES)
 
