--- a/examples/Makefile.win32.cygwin
+++ b/examples/Makefile.win32.cygwin
@@ -1,79 +1,61 @@
 ##########################################################################
-# Makefile for GLFW test programs on Windows using Cygwin.
+# Makefile for GLFW test programs on Windows using Cygwin
 #-------------------------------------------------------------------------
 # To compile the test files using this makefile, run:
 #  make -f Makefile.win32.cygwin
 ##########################################################################
 
-# Compiler settings
 CC     = gcc
 CFLAGS = -I../include -Wall -mwin32 -O3 -ffast-math
-#CFLAGS = -I../include -Wall -mwin32 -O3 -ffast-math -DGLFW_DLL
 
-# Linker settings
-LFLAGS = -mno-cygwin -mwindows -L../lib/win32 -lglfw -lglu32 -lopengl32 -lm -s
-#LFLAGS = -L../lib/win32 -lglfwdll -lglu32 -lopengl32 -lm -s
+LIB    = ../lib/win32/libglfw.a
+LFLAGS = -mno-cygwin -mwindows $(LIB) -lglu32 -lopengl32 -lm -s
 
-# Subsystem settings
 WINDOWS = -mno-cygwin -mwindows -e _mainCRTStartup
-CONSOLE =
+CONSOLE = -mno-cygwin -mconsole
 
+BINARIES = triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
+		   particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
+		   boing.exe wave.exe
 
-# Default: Build all tests
-all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-     particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
-	 boing.exe wave.exe
+all: $(BINARIES)
 
-
-clean:
-	@rm -f *.o *.obj *.tds *.exe
-
-
-# Rule for triangle
-triangle.exe: triangle.c
+triangle.exe: triangle.c $(LIB)
 	$(CC) $(CFLAGS) $(WINDOWS) triangle.c $(LFLAGS) -o $@
 
-# Rule for listmodes
-listmodes.exe: listmodes.c
+listmodes.exe: listmodes.c $(LIB)
 	$(CC) $(CFLAGS) $(CONSOLE) listmodes.c $(LFLAGS) -o $@
 
-# Rule for mthello
-mthello.exe: mthello.c
+mthello.exe: mthello.c $(LIB)
 	$(CC) $(CFLAGS) $(CONSOLE) mthello.c $(LFLAGS) -o $@
 
-# Rule for pong3d
-pong3d.exe: pong3d.c
+pong3d.exe: pong3d.c $(LIB)
 	$(CC) $(CFLAGS) $(WINDOWS) pong3d.c $(LFLAGS) -o $@
 
-# Rule for mtbench
-mtbench.exe: mtbench.c
+mtbench.exe: mtbench.c $(LIB)
 	$(CC) $(CFLAGS) $(CONSOLE) mtbench.c $(LFLAGS) -o $@
 
-# Rule for particles
-particles.exe: particles.c
+particles.exe: particles.c $(LIB)
 	$(CC) $(CFLAGS) $(CONSOLE) particles.c $(LFLAGS) -o $@
 
-# Rule for splitview
-splitview.exe: splitview.c
+splitview.exe: splitview.c $(LIB)
 	$(CC) $(CFLAGS) $(WINDOWS) splitview.c $(LFLAGS) -o $@
 
-# Rule for mipmaps
-mipmaps.exe: mipmaps.c
+mipmaps.exe: mipmaps.c $(LIB)
 	$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -o $@
 
-# Rule for joytest
-joytest.exe: joytest.c
+joytest.exe: joytest.c $(LIB)
 	$(CC) $(CFLAGS) $(CONSOLE) joytest.c $(LFLAGS) -o $@
 
-# Rule for gears
-gears.exe: gears.c
+gears.exe: gears.c $(LIB)
 	$(CC) $(CFLAGS) $(CONSOLE) gears.c $(LFLAGS) -o $@
 
-# Rule for boing
-boing.exe: boing.c
+boing.exe: boing.c $(LIB)
 	$(CC) $(CFLAGS) $(CONSOLE) boing.c $(LFLAGS) -o $@
 
-# Rule for wave
-wave.exe: wave.c
+wave.exe: wave.c $(LIB)
 	$(CC) $(CFLAGS) $(CONSOLE) wave.c $(LFLAGS) -o $@
+
+clean:
+	rm -f $(BINARIES)
 
