--- a/lib/win32/Makefile.win32.cross-mgw
+++ b/lib/win32/Makefile.win32.cross-mgw
@@ -6,41 +6,12 @@
 ##########################################################################
 PREFIX ?= /usr/local
 TARGET ?= i586-mingw32msvc-
-##########################################################################
-# Default: Build static and dynamic versions of GLFW
-##########################################################################
-default: libglfw.a glfw.dll
-
-##########################################################################
-# Install GLFW header and static library
-##########################################################################
-install: glfw.dll libglfw.a libglfw.pc
-	$(INSTALL) -d $(PREFIX)/bin 
-	$(INSTALL) -c glfw.dll $(PREFIX)/bin/glfw.dll 
-	$(INSTALL) -d $(PREFIX)/lib
-	$(INSTALL) -c -m 644 libglfw.a $(PREFIX)/lib/libglfw.a
-	$(INSTALL) -d $(PREFIX)/include/GL
-	$(INSTALL) -c -m 644 ../../include/GL/glfw.h $(PREFIX)/include/GL/glfw.h
-	$(INSTALL) -d $(PREFIX)/lib/pkgconfig
-	$(INSTALL) -c -m 644 libglfw.pc $(PREFIX)/lib/pkgconfig/libglfw.pc
-	
-##########################################################################
-# Clean up generated files
-##########################################################################
-clean:
-	@rm -f *.o
-	@rm -f *.obj
-	@rm -f *.tds
-	@rm -f lib*.a
-	@rm -f glfw.dll
-	@rm -f libglfw.pc
 
 ##########################################################################
 # GLFW version
 ##########################################################################
 VERMAJOR = 2
-VERMINOR = 6
-
+VERMINOR = 7
 
 ##########################################################################
 # Compiler settings
@@ -53,6 +24,7 @@ CFLAGS_DLL = $(CFLAGS) -mdll -DGLFW_BUILD_DLL
 CFLAGS_SPEED     = -c -I. -I.. -Wall -O3 -ffast-math
 CFLAGS_SPEED_DLL = $(CFLAGS_SPEED) -mdll -DGLFW_BUILD_DLL
 
+HEADERS = ../../include/GL/glfw.h ../internal.h platform.h
 
 ##########################################################################
 # Library builder settings
@@ -124,13 +96,36 @@ DLLOBJS = \
        win32_window_dll.o
 
 
+##########################################################################
+# Default: Build static and dynamic versions of GLFW
+##########################################################################
+all: libglfw.a glfw.dll
+
+##########################################################################
+# Install GLFW header and static library
+##########################################################################
+install: glfw.dll libglfw.a libglfw.pc
+	$(INSTALL) -d $(PREFIX)/bin 
+	$(INSTALL) -c glfw.dll $(PREFIX)/bin/glfw.dll 
+	$(INSTALL) -d $(PREFIX)/lib
+	$(INSTALL) -c -m 644 libglfw.a $(PREFIX)/lib/libglfw.a
+	$(INSTALL) -d $(PREFIX)/include/GL
+	$(INSTALL) -c -m 644 ../../include/GL/glfw.h $(PREFIX)/include/GL/glfw.h
+	$(INSTALL) -d $(PREFIX)/lib/pkgconfig
+	$(INSTALL) -c -m 644 libglfw.pc $(PREFIX)/lib/pkgconfig/libglfw.pc
+	
+##########################################################################
+# Clean up generated files
+##########################################################################
+clean:
+	rm -f $(OBJS) $(DLLOBJS)
+	rm -f libglfw.a glfw.dll libglfw.pc
 
 ##########################################################################
 # Rule for building static library
 ##########################################################################
 libglfw.a: $(OBJS)
 	$(TARGET)$(MKLIB) $(LIBFLAGS) $@ $(OBJS) $(SYSOBJS)
-
 
 ##########################################################################
 # Rule for building dynamic library
@@ -145,130 +140,130 @@ libglfw.pc: libglfw.pc.in
 ##########################################################################
 # Rules for building static library object files
 ##########################################################################
-enable.o: ../enable.c ../internal.h platform.h
+enable.o: ../enable.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../enable.c
 
-fullscreen.o: ../fullscreen.c ../internal.h platform.h
+fullscreen.o: ../fullscreen.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../fullscreen.c
 
-glext.o: ../glext.c ../internal.h platform.h
+glext.o: ../glext.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../glext.c
 
-image.o: ../image.c ../internal.h platform.h
+image.o: ../image.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_SPEED) -o $@ ../image.c
 
-init.o: ../init.c ../internal.h platform.h
+init.o: ../init.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../init.c
 
-input.o: ../input.c ../internal.h platform.h
+input.o: ../input.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../input.c
 
-joystick.o: ../joystick.c ../internal.h platform.h
+joystick.o: ../joystick.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../joystick.c
 
-stream.o: ../stream.c ../internal.h platform.h
+stream.o: ../stream.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../stream.c
 
-tga.o: ../tga.c ../internal.h platform.h
+tga.o: ../tga.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_SPEED) -o $@ ../tga.c
 
-thread.o: ../thread.c ../internal.h platform.h
+thread.o: ../thread.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../thread.c
 
-time.o: ../time.c ../internal.h platform.h
+time.o: ../time.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../time.c
 
-window.o: ../window.c ../internal.h platform.h
+window.o: ../window.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../window.c
 
-win32_enable.o: win32_enable.c ../internal.h platform.h
+win32_enable.o: win32_enable.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ win32_enable.c
 
-win32_fullscreen.o: win32_fullscreen.c ../internal.h platform.h
+win32_fullscreen.o: win32_fullscreen.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ win32_fullscreen.c
 
-win32_glext.o: win32_glext.c ../internal.h platform.h
+win32_glext.o: win32_glext.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ win32_glext.c
 
-win32_init.o: win32_init.c ../internal.h platform.h
+win32_init.o: win32_init.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ win32_init.c
 
-win32_joystick.o: win32_joystick.c ../internal.h platform.h
+win32_joystick.o: win32_joystick.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ win32_joystick.c
 
-win32_thread.o: win32_thread.c ../internal.h platform.h
+win32_thread.o: win32_thread.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ win32_thread.c
 
-win32_time.o: win32_time.c ../internal.h platform.h
+win32_time.o: win32_time.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ win32_time.c
 
-win32_window.o: win32_window.c ../internal.h platform.h
+win32_window.o: win32_window.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ win32_window.c
 
 
 ##########################################################################
 # Rules for building dynamic library object files
 ##########################################################################
-enable_dll.o: ../enable.c ../internal.h platform.h
+enable_dll.o: ../enable.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../enable.c
 
-fullscreen_dll.o: ../fullscreen.c ../internal.h platform.h
+fullscreen_dll.o: ../fullscreen.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../fullscreen.c
 
-glext_dll.o: ../glext.c ../internal.h platform.h
+glext_dll.o: ../glext.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../glext.c
 
-image_dll.o: ../image.c ../internal.h platform.h
+image_dll.o: ../image.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_SPEED_DLL) -o $@ ../image.c
 
-init_dll.o: ../init.c ../internal.h platform.h
+init_dll.o: ../init.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../init.c
 
-input_dll.o: ../input.c ../internal.h platform.h
+input_dll.o: ../input.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../input.c
 
-joystick_dll.o: ../joystick.c ../internal.h platform.h
+joystick_dll.o: ../joystick.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../joystick.c
 
-stream_dll.o: ../stream.c ../internal.h platform.h
+stream_dll.o: ../stream.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../stream.c
 
-tga_dll.o: ../tga.c ../internal.h platform.h
+tga_dll.o: ../tga.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_SPEED_DLL) -o $@ ../tga.c
 
-thread_dll.o: ../thread.c ../internal.h platform.h
+thread_dll.o: ../thread.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../thread.c
 
-time_dll.o: ../time.c ../internal.h platform.h
+time_dll.o: ../time.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../time.c
 
-window_dll.o: ../window.c ../internal.h platform.h
+window_dll.o: ../window.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../window.c
 
-win32_dllmain_dll.o: win32_dllmain.c ../internal.h platform.h
+win32_dllmain_dll.o: win32_dllmain.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_dllmain.c
 
-win32_enable_dll.o: win32_enable.c ../internal.h platform.h
+win32_enable_dll.o: win32_enable.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_enable.c
 
-win32_fullscreen_dll.o: win32_fullscreen.c ../internal.h platform.h
+win32_fullscreen_dll.o: win32_fullscreen.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_fullscreen.c
 
-win32_glext_dll.o: win32_glext.c ../internal.h platform.h
+win32_glext_dll.o: win32_glext.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_glext.c
 
-win32_init_dll.o: win32_init.c ../internal.h platform.h
+win32_init_dll.o: win32_init.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_init.c
 
-win32_joystick_dll.o: win32_joystick.c ../internal.h platform.h
+win32_joystick_dll.o: win32_joystick.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_joystick.c
 
-win32_thread_dll.o: win32_thread.c ../internal.h platform.h
+win32_thread_dll.o: win32_thread.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_thread.c
 
-win32_time_dll.o: win32_time.c ../internal.h platform.h
+win32_time_dll.o: win32_time.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_time.c
 
-win32_window_dll.o: win32_window.c ../internal.h platform.h
+win32_window_dll.o: win32_window.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ win32_window.c
 
