--- a/examples/Makefile.win32.lcc
+++ b/examples/Makefile.win32.lcc
@@ -21,8 +21,7 @@ CONSOLE = -subsystem console
 
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-     particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
-	 boing.exe wave.exe
+     particles.exe splitview.exe mipmaps.exe gears.exe boing.exe wave.exe
 
 
 # Rule for triangle
@@ -56,10 +55,6 @@ splitview.exe: splitview.c
 # Rule for mipmaps
 mipmaps.exe: mipmaps.c
 	$(CC) $(CFLAGS) mipmaps.c $(LFLAGS)  -o $@ -s $(WINDOWS)
-
-# Rule for joytest
-joytest.exe: joytest.c
-	$(CC) $(CFLAGS) joytest.c $(LFLAGS) -o $@ -s $(CONSOLE)
 
 # Rule for gears
 gears.exe: gears.c
