--- a/examples/Makefile.win32.mgw
+++ b/examples/Makefile.win32.mgw
@@ -21,8 +21,7 @@ CONSOLE = -mconsole
 
 # Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
-     particles.exe splitview.exe mipmaps.exe gears.exe joytest.exe \
-	 boing.exe wave.exe
+     particles.exe splitview.exe mipmaps.exe gears.exe boing.exe wave.exe
 
 
 # Rule for triangle
@@ -56,10 +55,6 @@ splitview.exe: splitview.c
 # Rule for mipmaps
 mipmaps.exe: mipmaps.c
 	$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -lm -o $@
-
-# Rule for joytest
-joytest.exe: joytest.c
-	$(CC) $(CFLAGS) $(CONSOLE) joytest.c $(LFLAGS) -lm -o $@
 
 # Rule for gears
 gears.exe: gears.c
