--- a/lib/win32/Makefile.win32.cygwin
+++ b/lib/win32/Makefile.win32.cygwin
@@ -18,7 +18,7 @@ VERMINOR = 7
 # Compiler settings
 ##########################################################################
 CC         = gcc
-CFLAGS     = -c -I. -I.. -Wall -mwin32 -Os
+CFLAGS     = -c -I. -I.. -Wall -mno-cygwin -mwin32 -Os
 CFLAGS_DLL = $(CFLAGS) -mdll -DGLFW_BUILD_DLL
 
 # Some modules should be optimized for speed (e.g. image decoding)
