--- a/tests/Makefile.win32.cygwin
+++ b/tests/Makefile.win32.cygwin
@@ -6,7 +6,7 @@
 ##########################################################################
 
 CC     = gcc
-CFLAGS = -I../include -Wall -O3 -ffast-math
+CFLAGS = -I../include -Wall -O3 -ffast-math -mno-cygwin
 
 LIB    = ../lib/win32/libglfw.a
 LFLAGS = $(LIB) -lglu32 -lopengl32 
