--- a/examples/Makefile.win32.cygwin
+++ b/examples/Makefile.win32.cygwin
@@ -6,13 +6,13 @@
 ##########################################################################
 
 CC     = gcc
-CFLAGS = -I../include -Wall -mwin32 -O3 -ffast-math
+CFLAGS = -I../include -Wall -O3 -ffast-math -mwin32 -mno-cygwin
 
 LIB    = ../lib/win32/libglfw.a
-LFLAGS = -mno-cygwin -mwindows $(LIB) -lglu32 -lopengl32 -lm -s
+LFLAGS = -mno-cygwin $(LIB) -lglu32 -lopengl32
 
-WINDOWS = -mno-cygwin -mwindows -e _mainCRTStartup
-CONSOLE = -mno-cygwin -mconsole
+WINDOWS = -mwindows -e _mainCRTStartup
+CONSOLE = -mconsole
 
 BINARIES = triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
 		   particles.exe splitview.exe mipmaps.exe gears.exe boing.exe wave.exe
