--- a/examples/Makefile.win32.mingw
+++ b/examples/Makefile.win32.mingw
@@ -1,70 +1,54 @@
 ##########################################################################
-# Makefile for GLFW test programs on Windows using MinGW32.
+# Makefile for GLFW test programs on Windows using bare MinGW
 #-------------------------------------------------------------------------
 # To compile the test files using this makefile, run:
-#  make -f Makefile.win32.mgw
+#  make -f Makefile.win32.mingw
 ##########################################################################
 
-# Compiler settings
 CC     = gcc
 CFLAGS = -I../include -Wall -O3 -ffast-math
-#CFLAGS = -I../include -Wall -O3 -ffast-math -DGLFW_DLL
 
-# Linker settings
-LFLAGS = -L../lib/win32 -lglfw -lglu32 -lopengl32 -s
-#LFLAGS = -L../lib/win32 -lglfwdll -lglu32 -lopengl32 -s
+LIB    = ../lib/win32/libglfw.a
+LFLAGS = $(LIB) -lglu32 -lopengl32 -s
 
-# Subsystem settings
 WINDOWS = -mwindows
 CONSOLE = -mconsole
 
+HEADER = ../include/GL/glfw.h
 
-# Default: Build all tests
 all: triangle.exe listmodes.exe mthello.exe pong3d.exe mtbench.exe \
      particles.exe splitview.exe mipmaps.exe gears.exe boing.exe wave.exe
 
-
-# Rule for triangle
-triangle.exe: triangle.c
+triangle.exe: triangle.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) triangle.c $(LFLAGS) -o $@
 
-# Rule for listmodes
-listmodes.exe: listmodes.c
+listmodes.exe: listmodes.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) listmodes.c $(LFLAGS) -o $@
 
-# Rule for mthello
-mthello.exe: mthello.c
+mthello.exe: mthello.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) mthello.c $(LFLAGS) -o $@
 
-# Rule for pong3d
-pong3d.exe: pong3d.c
+pong3d.exe: pong3d.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) pong3d.c $(LFLAGS) -lm -o $@
 
-# Rule for mtbench
-mtbench.exe: mtbench.c
+mtbench.exe: mtbench.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) mtbench.c $(LFLAGS) -o $@
 
-# Rule for particles
-particles.exe: particles.c
+particles.exe: particles.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) particles.c $(LFLAGS) -lm -o $@
 
-# Rule for splitview
-splitview.exe: splitview.c
+splitview.exe: splitview.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) splitview.c $(LFLAGS) -lm -o $@
 
-# Rule for mipmaps
-mipmaps.exe: mipmaps.c
+mipmaps.exe: mipmaps.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -lm -o $@
 
-# Rule for gears
-gears.exe: gears.c
+gears.exe: gears.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) gears.c $(LFLAGS) -lm -o $@
 
-# Rule for boing
-boing.exe: boing.c
+boing.exe: boing.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) boing.c $(LFLAGS) -lm -o $@
 
-# Rule for wave
-wave.exe: wave.c
+wave.exe: wave.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) wave.c $(LFLAGS) -lm -o $@
 
