--- a/tests/Makefile.cocoa
+++ b/tests/Makefile.cocoa
@@ -13,6 +13,8 @@ CFLAGS = -I../include -m32
 LIB    = ../lib/cocoa/libglfw.a
 LFLAGS = $(LIB) -framework Cocoa -framework OpenGL
 
+HEADER = ../include/GL/glfw.h
+
 # Default: Build all tests
 all: Accuracy.app/Contents/MacOS/Accuracy \
      Defaults.app/Contents/MacOS/Defaults \
@@ -25,43 +27,43 @@ all: Accuracy.app/Contents/MacOS/Accuracy \
      Tearing.app/Contents/MacOS/Tearing \
      Version.app/Contents/MacOS/Version
 
-Accuracy.app/Contents/MacOS/Accuracy: accuracy.c $(LIB)
+Accuracy.app/Contents/MacOS/Accuracy: accuracy.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Accuracy
 	$(CC) $(CFLAGS) accuracy.c $(LFLAGS) -o Accuracy.app/Contents/MacOS/Accuracy
 
-Defaults.app/Contents/MacOS/Defaults: defaults.c $(LIB)
+Defaults.app/Contents/MacOS/Defaults: defaults.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Defaults
 	$(CC) $(CFLAGS) defaults.c $(LFLAGS) -o Defaults.app/Contents/MacOS/Defaults
 
-Events.app/Contents/MacOS/Events: events.c $(LIB)
+Events.app/Contents/MacOS/Events: events.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Events
 	$(CC) $(CFLAGS) events.c $(LFLAGS) -o Events.app/Contents/MacOS/Events
 
-FSAA.app/Contents/MacOS/FSAA: fsaa.c $(LIB)
+FSAA.app/Contents/MacOS/FSAA: fsaa.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh FSAA
 	$(CC) $(CFLAGS) fsaa.c $(LFLAGS) -o FSAA.app/Contents/MacOS/FSAA
 
-Fullscreen.app/Contents/MacOS/Fullscreen: fullscreen.c $(LIB)
+Fullscreen.app/Contents/MacOS/Fullscreen: fullscreen.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Fullscreen
 	$(CC) $(CFLAGS) fullscreen.c $(LFLAGS) -o Fullscreen.app/Contents/MacOS/Fullscreen
 
-Joysticks.app/Contents/MacOS/Joysticks: joysticks.c $(LIB)
+Joysticks.app/Contents/MacOS/Joysticks: joysticks.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Joysticks
 	$(CC) $(CFLAGS) joysticks.c $(LFLAGS) -o Joysticks.app/Contents/MacOS/Joysticks
 
-Peter.app/Contents/MacOS/Peter: peter.c $(LIB)
+Peter.app/Contents/MacOS/Peter: peter.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Peter
 	$(CC) $(CFLAGS) peter.c $(LFLAGS) -o Peter.app/Contents/MacOS/Peter
 
-ReOpen.app/Contents/MacOS/ReOpen: reopen.c $(LIB)
+ReOpen.app/Contents/MacOS/ReOpen: reopen.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh ReOpen
 	$(CC) $(CFLAGS) reopen.c $(LFLAGS) -o ReOpen.app/Contents/MacOS/ReOpen
 
-Tearing.app/Contents/MacOS/Tearing: tearing.c $(LIB)
+Tearing.app/Contents/MacOS/Tearing: tearing.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Tearing
 	$(CC) $(CFLAGS) tearing.c $(LFLAGS) -o Tearing.app/Contents/MacOS/Tearing
 
-Version.app/Contents/MacOS/Version: version.c $(LIB)
+Version.app/Contents/MacOS/Version: version.c $(LIB) $(HEADER)
 	/bin/sh bundle.sh Version
 	$(CC) $(CFLAGS) version.c $(LFLAGS) -o Version.app/Contents/MacOS/Version
 
