--- a/tests/Makefile.win32.cross-mgw
+++ b/tests/Makefile.win32.cross-mgw
@@ -19,37 +19,39 @@ CONSOLE = -mconsole
 BINARIES = accuracy.exe defaults.exe events.exe fsaa.exe fullscreen.exe \
            joysticks.exe peter.exe reopen.exe tearing.exe version.exe
 
+HEADER = ../include/GL/glfw.h
+
 all: $(BINARIES)
 
-accuracy.exe: accuracy.c $(LIB)
+accuracy.exe: accuracy.c $(LIB) $(HEADER)
 	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) accuracy.c $(LFLAGS) -o $@
 
-defaults.exe: defaults.c $(LIB)
+defaults.exe: defaults.c $(LIB) $(HEADER)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) defaults.c $(LFLAGS) -o $@
 
-events.exe: events.c $(LIB)
+events.exe: events.c $(LIB) $(HEADER)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) events.c $(LFLAGS) -o $@
 
-fsaa.exe: fsaa.c $(LIB)
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) fsaa.c $(LFLAGS) -lm -o $@
+fsaa.exe: fsaa.c $(LIB) $(HEADER)
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) fsaa.c $(LFLAGS) -o $@
 
-fullscreen.exe: fullscreen.c $(LIB)
-	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fullscreen.c $(LFLAGS) -lm -o $@
+fullscreen.exe: fullscreen.c $(LIB) $(HEADER)
+	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) fullscreen.c $(LFLAGS) -o $@
 
-joysticks.exe: joysticks.c $(LIB)
-	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) joysticks.c $(LFLAGS) -lm -o $@
+joysticks.exe: joysticks.c $(LIB) $(HEADER)
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) joysticks.c $(LFLAGS) -o $@
 
-peter.exe: peter.c $(LIB)
+peter.exe: peter.c $(LIB) $(HEADER)
 	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) peter.c $(LFLAGS) -o $@
 
-reopen.exe: reopen.c $(LIB)
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) reopen.c $(LFLAGS) -lm -o $@
+reopen.exe: reopen.c $(LIB) $(HEADER)
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) reopen.c $(LFLAGS) -o $@
 
-tearing.exe: tearing.c $(LIB)
-	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) tearing.c $(LFLAGS) -lm -o $@
+tearing.exe: tearing.c $(LIB) $(HEADER)
+	$(TARGET)$(CC) $(CFLAGS) $(WINDOWS) tearing.c $(LFLAGS) -o $@
 
-version.exe: version.c getopt.c $(LIB)
-	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) version.c getopt.c $(LFLAGS) -lm -o $@
+version.exe: version.c getopt.c $(LIB) $(HEADER)
+	$(TARGET)$(CC) $(CFLAGS) $(CONSOLE) version.c getopt.c $(LFLAGS) -o $@
 
 clean:
 	rm -f $(BINARIES)
