--- a/lib/cocoa/Makefile.cocoa
+++ b/lib/cocoa/Makefile.cocoa
@@ -20,11 +20,8 @@ default: libglfw.a libglfw.dylib
 ##########################################################################
 # Compiler settings
 ##########################################################################
-CC           = gcc
-CFLAGS       = -c -I. -I.. -Wall -O2 -fno-common -g
-
-# Some modules should be optimized for speed (e.g. image decoding)
-CFLAGS_SPEED = -c -I. -I.. -Wall -O3 -ffast-math -fno-common -g
+CC     = gcc
+CFLAGS = -c -I. -I.. -Wall -O2 -fno-common -g
 
 
 ##########################################################################
@@ -122,7 +119,7 @@ glext.o: ../glext.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../glext.c
 
 image.o: ../image.c $(HEADERS)
-	$(CC) $(CFLAGS_SPEED) -o $@ ../image.c
+	$(CC) $(CFLAGS) -o $@ ../image.c
 
 init.o: ../init.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../init.c
@@ -137,7 +134,7 @@ stream.o: ../stream.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../stream.c
 
 tga.o: ../tga.c $(HEADERS)
-	$(CC) $(CFLAGS_SPEED) -o $@ ../tga.c
+	$(CC) $(CFLAGS) -o $@ ../tga.c
 
 thread.o: ../thread.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../thread.c
