--- a/lib/win32/Makefile.win32.cross-mgw
+++ b/lib/win32/Makefile.win32.cross-mgw
@@ -20,10 +20,6 @@ CC         = gcc
 CFLAGS     = -c -I. -I.. -Wall -Os
 CFLAGS_DLL = $(CFLAGS) -mdll -DGLFW_BUILD_DLL
 
-# Some modules should be optimized for speed (e.g. image decoding)
-CFLAGS_SPEED     = -c -I. -I.. -Wall -O3 -ffast-math
-CFLAGS_SPEED_DLL = $(CFLAGS_SPEED) -mdll -DGLFW_BUILD_DLL
-
 HEADERS = ../../include/GL/glfw.h ../internal.h platform.h
 
 ##########################################################################
@@ -150,7 +146,7 @@ glext.o: ../glext.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../glext.c
 
 image.o: ../image.c $(HEADERS)
-	$(TARGET)$(CC) $(CFLAGS_SPEED) -o $@ ../image.c
+	$(TARGET)$(CC) $(CFLAGS) -o $@ ../image.c
 
 init.o: ../init.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../init.c
@@ -165,7 +161,7 @@ stream.o: ../stream.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../stream.c
 
 tga.o: ../tga.c $(HEADERS)
-	$(TARGET)$(CC) $(CFLAGS_SPEED) -o $@ ../tga.c
+	$(TARGET)$(CC) $(CFLAGS) -o $@ ../tga.c
 
 thread.o: ../thread.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS) -o $@ ../thread.c
@@ -214,7 +210,7 @@ glext_dll.o: ../glext.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../glext.c
 
 image_dll.o: ../image.c $(HEADERS)
-	$(TARGET)$(CC) $(CFLAGS_SPEED_DLL) -o $@ ../image.c
+	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../image.c
 
 init_dll.o: ../init.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../init.c
@@ -229,7 +225,7 @@ stream_dll.o: ../stream.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../stream.c
 
 tga_dll.o: ../tga.c $(HEADERS)
-	$(TARGET)$(CC) $(CFLAGS_SPEED_DLL) -o $@ ../tga.c
+	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../tga.c
 
 thread_dll.o: ../thread.c $(HEADERS)
 	$(TARGET)$(CC) $(CFLAGS_DLL) -o $@ ../thread.c
