--- a/lib/win32/Makefile.win32.lcc
+++ b/lib/win32/Makefile.win32.lcc
@@ -25,10 +25,6 @@ CC         = lc
 CFLAGS     = -c -O -A -I. -I..
 CFLAGS_DLL = $(CFLAGS) -DGLFW_BUILD_DLL
 
-# Some modules should be optimized for speed (e.g. image decoding)
-CFLAGS_SPEED     = $(CFLAGS)
-CFLAGS_SPEED_DLL = $(CFLAGS_DLL)
-
 
 ##########################################################################
 # Library builder settings
@@ -128,7 +124,7 @@ glext.obj: ..\\glext.c ..\\internal.h platform.h
 	$(CC) $(CFLAGS) -Fo$@ ..\\glext.c
 
 image.obj: ..\\image.c ..\\internal.h platform.h
-	$(CC) $(CFLAGS_SPEED) -Fo$@ ..\\image.c
+	$(CC) $(CFLAGS) -Fo$@ ..\\image.c
 
 init.obj: ..\\init.c ..\\internal.h platform.h
 	$(CC) $(CFLAGS) -Fo$@ ..\\init.c
@@ -143,7 +139,7 @@ stream.obj: ..\\stream.c ..\\internal.h platform.h
 	$(CC) $(CFLAGS) -Fo$@ ..\\stream.c
 
 tga.obj: ..\\tga.c ..\\internal.h platform.h
-	$(CC) $(CFLAGS_SPEED) -Fo$@ ..\\tga.c
+	$(CC) $(CFLAGS) -Fo$@ ..\\tga.c
 
 thread.obj: ..\\thread.c ..\\internal.h platform.h
 	$(CC) $(CFLAGS) -Fo$@ ..\\thread.c
@@ -192,7 +188,7 @@ glext_dll.obj: ..\\glext.c ..\\internal.h platform.h
 	$(CC) $(CFLAGS_DLL) -Fo$@ ..\\glext.c
 
 image_dll.obj: ..\\image.c ..\\internal.h platform.h
-	$(CC) $(CFLAGS_SPEED_DLL) -Fo$@ ..\\image.c
+	$(CC) $(CFLAGS_DLL) -Fo$@ ..\\image.c
 
 init_dll.obj: ..\\init.c ..\\internal.h platform.h
 	$(CC) $(CFLAGS_DLL) -Fo$@ ..\\init.c
@@ -207,7 +203,7 @@ stream_dll.obj: ..\\stream.c ..\\internal.h platform.h
 	$(CC) $(CFLAGS_DLL) -Fo$@ ..\\stream.c
 
 tga_dll.obj: ..\\tga.c ..\\internal.h platform.h
-	$(CC) $(CFLAGS_SPEED_DLL) -Fo$@ ..\\tga.c
+	$(CC) $(CFLAGS_DLL) -Fo$@ ..\\tga.c
 
 thread_dll.obj: ..\\thread.c ..\\internal.h platform.h
 	$(CC) $(CFLAGS_DLL) -Fo$@ ..\\thread.c
