--- a/lib/x11/Makefile.x11.in
+++ b/lib/x11/Makefile.x11.in
@@ -135,7 +135,7 @@ glext.o: ../glext.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../glext.c
 
 image.o: ../image.c $(HEADERS)
-	$(CC) $(CFLAGS_SPEED) -o $@ ../image.c
+	$(CC) $(CFLAGS) -o $@ ../image.c
 
 init.o: ../init.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../init.c
@@ -150,7 +150,7 @@ stream.o: ../stream.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../stream.c
 
 tga.o: ../tga.c $(HEADERS)
-	$(CC) $(CFLAGS_SPEED) -o $@ ../tga.c
+	$(CC) $(CFLAGS) -o $@ ../tga.c
 
 thread.o: ../thread.c $(HEADERS)
 	$(CC) $(CFLAGS) -o $@ ../thread.c
@@ -202,7 +202,7 @@ so_glext.o: ../glext.c $(HEADERS)
 	$(CC) -fPIC $(CFLAGS) -o $@ ../glext.c
 
 so_image.o: ../image.c $(HEADERS)
-	$(CC) -fPIC $(CFLAGS_SPEED) -o $@ ../image.c
+	$(CC) -fPIC $(CFLAGS) -o $@ ../image.c
 
 so_init.o: ../init.c $(HEADERS)
 	$(CC) -fPIC $(CFLAGS) -o $@ ../init.c
@@ -217,7 +217,7 @@ so_stream.o: ../stream.c $(HEADERS)
 	$(CC) -fPIC $(CFLAGS) -o $@ ../stream.c
 
 so_tga.o: ../tga.c $(HEADERS)
-	$(CC) -fPIC $(CFLAGS_SPEED) -o $@ ../tga.c
+	$(CC) -fPIC $(CFLAGS) -o $@ ../tga.c
 
 so_thread.o: ../thread.c $(HEADERS)
 	$(CC) -fPIC $(CFLAGS) -o $@ ../thread.c
