--- a/examples/Makefile.win32.mingw
+++ b/examples/Makefile.win32.mingw
@@ -6,7 +6,7 @@
 ##########################################################################
 
 CC     = gcc
-CFLAGS = -I../include -Wall -O3 -ffast-math
+CFLAGS = -I../include -Wall -O2
 
 LIB    = ../lib/win32/libglfw.a
 LFLAGS = $(LIB) -lglu32 -lopengl32 -s
