--- a/lib/macosx/Makefile.macosx
+++ b/lib/macosx/Makefile.macosx
@@ -23,9 +23,6 @@ default: libglfw.a libglfw.dylib
 CC           = gcc
 CFLAGS       = -c -I. -I.. -Wall -O2 -fno-common -g -m32
 
-# Some modules should be optimized for speed (e.g. image decoding)
-CFLAGS_SPEED = -c -I. -I.. -Wall -O3 -ffast-math -fno-common -g -m32
-
 
 ##########################################################################
 # Library builder settings
@@ -121,7 +118,7 @@ glext.o: ../glext.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../glext.c
 
 image.o: ../image.c ../internal.h platform.h
-	$(CC) $(CFLAGS_SPEED) -o $@ ../image.c
+	$(CC) $(CFLAGS) -o $@ ../image.c
 
 init.o: ../init.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../init.c
@@ -136,7 +133,7 @@ stream.o: ../stream.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../stream.c
 
 tga.o: ../tga.c ../internal.h platform.h
-	$(CC) $(CFLAGS_SPEED) -o $@ ../tga.c
+	$(CC) $(CFLAGS) -o $@ ../tga.c
 
 thread.o: ../thread.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../thread.c
