--- a/lib/macosx/Makefile.macosx.universal
+++ b/lib/macosx/Makefile.macosx.universal
@@ -20,18 +20,14 @@ default: libglfw.a
 ##########################################################################
 # Compiler settings
 ##########################################################################
-CC           = gcc
-FATFLAGS     = -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386
-CFLAGS       = -c -I. -I.. -Wall -Os -fno-common $(FATFLAGS)
-
-# Some modules should be optimized for speed (e.g. image decoding)
-CFLAGS_SPEED = -c -I. -I.. -Wall -O3 -ffast-math -fno-common $(FATFLAGS)
+CC        = gcc
+FATFLAGS  = -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386
+CFLAGS    = -c -I. -I.. -Wall -O2 -fno-common $(FATFLAGS)
 
 
 ##########################################################################
 # Library builder settings
 ##########################################################################
-# Static library
 SED       = sed
 INSTALL   = install
 MKLIB     = ar
@@ -56,7 +52,7 @@ install: libglfw.a libglfw.pc
 # Rule for cleaning up generated files
 ##########################################################################
 clean:
-	@rm -f *.o libglfw.a libglfw.pc
+	rm -f *.o libglfw.a libglfw.pc
 
 
 ##########################################################################
@@ -114,7 +110,7 @@ glext.o: ../glext.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../glext.c
 
 image.o: ../image.c ../internal.h platform.h
-	$(CC) $(CFLAGS_SPEED) -o $@ ../image.c
+	$(CC) $(CFLAGS) -o $@ ../image.c
 
 init.o: ../init.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../init.c
@@ -129,7 +125,7 @@ stream.o: ../stream.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../stream.c
 
 tga.o: ../tga.c ../internal.h platform.h
-	$(CC) $(CFLAGS_SPEED) -o $@ ../tga.c
+	$(CC) $(CFLAGS) -o $@ ../tga.c
 
 thread.o: ../thread.c ../internal.h platform.h
 	$(CC) $(CFLAGS) -o $@ ../thread.c
