--- a/lib/win32/Makefile.win32.cross-mgw
+++ b/lib/win32/Makefile.win32.cross-mgw
@@ -17,7 +17,7 @@ VERMINOR = 7
 # Compiler settings
 ##########################################################################
 CC         = gcc
-CFLAGS     = -c -I. -I.. -Wall -Os
+CFLAGS     = -c -I. -I.. -Wall -O2
 CFLAGS_DLL = $(CFLAGS) -mdll -DGLFW_BUILD_DLL
 
 HEADERS = ../../include/GL/glfw.h ../internal.h platform.h
