--- a/lib/win32/Makefile.win32.mingw
+++ b/lib/win32/Makefile.win32.mingw
@@ -22,7 +22,7 @@ VERMINOR = 7
 # Compiler settings
 ##########################################################################
 CC         = gcc
-CFLAGS     = -c -I. -I.. -Wall -Os
+CFLAGS     = -c -I. -I.. -Wall -O2
 CFLAGS_DLL = $(CFLAGS) -mdll -DGLFW_BUILD_DLL
 
 
