Renamed default make target to 'all' where applicable.

--- a/lib/macosx/Makefile.macosx.universal
+++ b/lib/macosx/Makefile.macosx.universal
@@ -14,7 +14,7 @@ PREFIX ?= /usr/local
 ##########################################################################
 # Default: Build GLFW static library
 ##########################################################################
-default: libglfw.a
+all: libglfw.a
 
 
 ##########################################################################
