--- a/lib/win32/Makefile.win32.mingw
+++ b/lib/win32/Makefile.win32.mingw
@@ -8,7 +8,7 @@
 ##########################################################################
 # Default: Build static and dynamic versions of GLFW
 ##########################################################################
-default: libglfw.a glfw.dll
+all: libglfw.a glfw.dll
 
 
 ##########################################################################
