--- a/lib/x11/Makefile.x11.in
+++ b/lib/x11/Makefile.x11.in
@@ -8,7 +8,7 @@ PREFIX ?= /usr/local
 ##########################################################################
 # Default: Build GLFW static library
 ##########################################################################
-default: libglfw.a libglfw.so
+all: libglfw.a libglfw.so
 
 
 ##########################################################################
