--- a/lib/cocoa/Makefile.cocoa
+++ b/lib/cocoa/Makefile.cocoa
@@ -14,7 +14,7 @@ PREFIX ?= /usr/local
 ##########################################################################
 # Default: Build GLFW static and shared library
 ##########################################################################
-default: libglfw.a libglfw.dylib
+all: libglfw.a libglfw.dylib
 
 
 ##########################################################################
