--- a/lib/macosx/Makefile.macosx
+++ b/lib/macosx/Makefile.macosx
@@ -14,7 +14,7 @@ PREFIX ?= /usr/local
 ##########################################################################
 # Default: Build GLFW static and shared library
 ##########################################################################
-default: libglfw.a libglfw.dylib
+all: libglfw.a libglfw.dylib
 
 
 ##########################################################################
