--- a/lib/win32/Makefile.win32.msvc
+++ b/lib/win32/Makefile.win32.msvc
@@ -8,7 +8,7 @@
 ##########################################################################
 # Default: Build static and dynamic versions of GLFW
 ##########################################################################
-default: glfw.lib glfw.dll
+all: glfw.lib glfw.dll
 
 
 ##########################################################################
