--- a/examples/Makefile.win32.cygwin
+++ b/examples/Makefile.win32.cygwin
@@ -44,13 +44,13 @@ mipmaps.exe: mipmaps.c $(LIB)
 	$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -o $@
 
 gears.exe: gears.c $(LIB)
-	$(CC) $(CFLAGS) $(CONSOLE) gears.c $(LFLAGS) -o $@
+	$(CC) $(CFLAGS) $(WINDOWS) gears.c $(LFLAGS) -o $@
 
 boing.exe: boing.c $(LIB)
-	$(CC) $(CFLAGS) $(CONSOLE) boing.c $(LFLAGS) -o $@
+	$(CC) $(CFLAGS) $(WINDOWS) boing.c $(LFLAGS) -o $@
 
 wave.exe: wave.c $(LIB)
-	$(CC) $(CFLAGS) $(CONSOLE) wave.c $(LFLAGS) -o $@
+	$(CC) $(CFLAGS) $(WINDOWS) wave.c $(LFLAGS) -o $@
 
 clean:
 	rm -f $(BINARIES)
