--- a/examples/Makefile.win32.mingw
+++ b/examples/Makefile.win32.mingw
@@ -44,7 +44,7 @@ mipmaps.exe: mipmaps.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) mipmaps.c $(LFLAGS) -lm -o $@
 
 gears.exe: gears.c $(LIB) $(HEADER)
-	$(CC) $(CFLAGS) $(CONSOLE) gears.c $(LFLAGS) -lm -o $@
+	$(CC) $(CFLAGS) $(WINDOWS) gears.c $(LFLAGS) -lm -o $@
 
 boing.exe: boing.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(WINDOWS) boing.c $(LFLAGS) -lm -o $@
