--- a/support/msvc90/fsinput.vcproj
+++ b/support/msvc90/fsinput.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="fullscreen"
+	Name="fsinput"
 	ProjectGUID="{1D71F54A-26A9-4BE8-9B1A-E6027252D8FF}"
-	RootNamespace="fullscreen"
+	RootNamespace="fsinput"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -178,7 +178,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\fullscreen.c"
+				RelativePath="..\..\tests\fsinput.c"
 				>
 			</File>
 		</Filter>
