--- a/tests/Makefile.win32.cygwin
+++ b/tests/Makefile.win32.cygwin
@@ -14,7 +14,7 @@ LFLAGS = -mno-cygwin $(LIB) -lglu32 -lopengl32
 WINDOWS = -mwindows -e _mainCRTStartup
 CONSOLE = -mconsole
 
-BINARIES = accuracy.exe defaults.exe events.exe fsaa.exe fullscreen.exe \
+BINARIES = accuracy.exe defaults.exe events.exe fsaa.exe fsinput.exe \
            joysticks.exe peter.exe reopen.exe tearing.exe version.exe
 
 HEADER = ../include/GL/glfw.h
@@ -33,8 +33,8 @@ events.exe: events.c $(LIB) $(HEADER)
 fsaa.exe: fsaa.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) fsaa.c $(LFLAGS) -lm -o $@
 
-fullscreen.exe: fullscreen.c $(LIB) $(HEADER)
-	$(CC) $(CFLAGS) $(WINDOWS) fullscreen.c $(LFLAGS) -lm -o $@
+fsinput.exe: fsinput.c $(LIB) $(HEADER)
+	$(CC) $(CFLAGS) $(WINDOWS) fsinput.c $(LFLAGS) -lm -o $@
 
 joysticks.exe: joysticks.c $(LIB) $(HEADER)
 	$(CC) $(CFLAGS) $(CONSOLE) joysticks.c $(LFLAGS) -lm -o $@
